/* $Id: ChangeLog 611 2006-11-26 05:35:06Z knut.osmundsen@oracle.com $ */

2006-11-25:
    - kmk, kBuild:
        o Added cat as builtin command.
        o Added GNU sed version 4.1.5 and ported it to MSC.
        o Added rmdir as builtin and external command.
        o Made mkdir not modify the argument strings.
        o Made mkdir deal properly with DOS slashes on OS/2 and Windows.

2006-11-24:
    - kBuild/bin/x86.win32/kmk.exe, kBuild/bin/x86.linux/kmk:
        o Rebuilt with current code. 
    - kBuild/footer.kmk:
        o Fixed some issues with SDKS and linking.
    - kmk:
        o Fixed bug in the sdk walking in kbuild_collect_source_prop.
        o Added --pretty-command-printing for simplifying makefile debugging.

2006-11-23:
    - dist/portage:
        o Hacked together two ebuilds for the Gentoo Portage.
    - Config.kmk, Makefile.kmk:
        o #6: Hacking *nix install build for Gentoo.
    - src/gmake/Makefile.kmk, src/lib/Makefile:
        o Always include header.kmk when testing BUILD_TARGET*.
    - kBuild/header.kmk:
        o BUILD_TYPE defaults to 'release'.
    - kBuild/tools/GCC*.kmk:
        o Cleaned up the -s and -g usage.
    - kBuild/bin/x86.win32, kBuild/bin/x86.linux:
        o Rebuilt with current code. 
    - kBuild/footer.kmk:
        o #3: Clean link output files.
    - kBuild/header.kmk, kmk:
        o #6: Did code changes for unix installation. Will do install goals when creating the gentoo ebuild.
        o #5: Proper versioning. (#5)
    - kmk:
        o Support SDK.$(BUILD_TARGET_ARCH) too (only bug).
        o Fixed a bug when gather SDKs.

2006-09-28:
    - kBuild/header.kmk, kBuild/env.sh, kBuild/tools/GCC4MACH.kmk, kBuild/bin/x86.darwin/, src/gmake, Config.kmk:
        o Initial Mac OS X / Darwin bootstrapping.

2006-09-23:
    - kBuild/footer.kmk:
        o Recursive template inheritance.
    - kBuild/header.kmk, kBuild/footer.kmk:
        o Removed some checks for features which are present in both gmake 3.81 and kmk.