@@ -1,4 +1,4 @@
-/* $Id: kmkbuiltin.c 611 2006-11-26 05:35:06Z knut.osmundsen@oracle.com $ */
+/* $Id: kmkbuiltin.c 613 2006-11-26 06:19:04Z knut.osmundsen@oracle.com $ */
 /** @file
  *
  * kMk Builtin command execution.
@@ -191,12 +191,13 @@ int kmk_builtin_command_parsed(int argc, char **argv)
         rc = kmk_builtin_ln(argc, argv, environ);
     else if (!strcmp(pszCmd, "mkdir"))
         rc = kmk_builtin_mkdir(argc, argv, environ);
-    //else if (!strcmp(pszCmd, "mv"))
-    //    rc = kmk_builtin_mv(argc, argv, environ);
+    else if (!strcmp(pszCmd, "mv"))
+        rc = kmk_builtin_mv(argc, argv, environ);
     else if (!strcmp(pszCmd, "rm"))
         rc = kmk_builtin_rm(argc, argv, environ);
     else if (!strcmp(pszCmd, "rmdir"))
         rc = kmk_builtin_rmdir(argc, argv, environ);
+    /* rarely used commands: */
     else if (!strcmp(pszCmd, "cat"))
         rc = kmk_builtin_cat(argc, argv, environ);
     else if (!strcmp(pszCmd, "cp"))
